--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "plotly.js-dist-min": "^3.1.1",
+    "idb": "^8.0.3",
+    "plotly.js-basic-dist-min": "^3.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-plotly.js": "^2.6.0"
@@ -23,6 +24,7 @@
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/plotly.js": "^3.0.6",
+    "@types/plotly.js-basic-dist-min": "^2.12.4",
     "@types/plotly.js-dist-min": "^2.3.4",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
