--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "plotly.js-basic-dist-min": "^3.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-plotly.js": "^2.6.0"
+    "react-plotly.js": "^2.6.0",
+    "uplot": "^1.6.32"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
